--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
     <title>Simple JS App</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
   </head>
-
+  <header>
+    <img
+      class="page-header__item"
+      src="svg/nkblogoblue.svg"
+      height="70"
+      width="70"
+      alt="page logo"
+    />
+  </header>
   <body>
     <script src="js/scripts.js"></script>
   </body>
