--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
     <title>Pokedex</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
   </head>
-  <header>
-    <img
-      class="page-header__item"
-      src="svg/nkblogoblue.svg"
-      height="70"
-      width="70"
-      alt="page logo"
-    />
-  </header>
   <body>
+    <header>
+      <img
+        class="page-header__item"
+        src="svg/nkblogoblue.svg"
+        height="70"
+        width="70"
+        alt="page logo"
+      />
+    </header>
+    <h1>Pokedex</h1>
+    <ul class="pokemon-list"></ul>
     <script src="js/scripts.js"></script>
   </body>
 </html>
