--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
         alt="page logo"
       />
     </header>
-    <h1>Pokedex</h1>
-    <ul class="pokemon-list"></ul>
+    <div class="main-content">
+      <h1>Pokedex</h1>
+      <ul class="pokemon-list"></ul>
+    </div>
     <script src="js/scripts.js"></script>
   </body>
 </html>
