--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
     </header>
     <div class="main-content">
       <h1>Pokedex</h1>
+      <p id="loading-message"></p>
       <ul class="pokemon-list"></ul>
     </div>
+    <script src="js/promise-polyfill.js"></script>
+    <script src="js/fetch.umd.js"></script>
     <script src="js/scripts.js"></script>
   </body>
 </html>
