--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
         alt="page logo"
       />
     </header>
-    <div class="main-content">
+    <div class="container">
       <h1>Pokedex</h1>
       <p id="loading-message"></p>
       <ul class="pokemon-list"></ul>
     </div>
+    <div id="modal-container"></div>
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch.umd.js"></script>
     <script src="js/scripts.js"></script>
