--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
       <img class="header-img" src="img/snorlax.png" alt="Pokemon icon" />
 
       <input
-        type="text"
-        id="myInput"
+        type="search"
+        id="pokemon-search"
         onkeyup="searchFunction()"
         placeholder="Search for Pokemon.."
         title="Type in a name"
+        hidden
       />
     </header>
     <div class="container">
