--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         onkeyup="searchFunction()"
         placeholder="Search for Pokemon.."
         title="Type in a name"
+        hidden
       />
     </header>
     <div class="container">
