--- a/index.html
+++ b/index.html
@@ -5,30 +5,93 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Pokedex</title>
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
   </head>
   <body>
-    <header>
-      <img
-        class="page-header__item"
-        src="svg/nkblogoblue.svg"
-        height="70"
-        width="70"
-        alt="page logo"
-      />
-      <img class="header-img" src="img/eevee.png" alt="Pokemon icon" />
-      <img class="header-img" src="img/pikachu.png" alt="Pokemon icon" />
-      <img class="header-img" src="img/charmander.png" alt="Pokemon icon" />
-      <img class="header-img" src="img/bullbasaur.png" alt="Pokemon icon" />
-      <img class="header-img" src="img/squirtle.png" alt="Pokemon icon" />
-      <img class="header-img" src="img/snorlax.png" alt="Pokemon icon" />
+    <header class="page-header">
+      <nav class="navbar fixed-top">
+        <div class="container-fluid">
+          <img
+            class="page-header__item"
+            src="svg/nkblogoblue.svg"
+            height="70"
+            width="70"
+            alt="page logo"
+          />
+          <img class="header-img" src="img/eevee.png" alt="Pokemon icon" />
+          <img class="header-img" src="img/pikachu.png" alt="Pokemon icon" />
+          <img class="header-img" src="img/charmander.png" alt="Pokemon icon" />
+          <img class="header-img" src="img/bullbasaur.png" alt="Pokemon icon" />
+          <img class="header-img" src="img/squirtle.png" alt="Pokemon icon" />
+          <img class="header-img" src="img/snorlax.png" alt="Pokemon icon" />
+
+          <form class="d-flex" role="search">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Search pokemon.."
+              aria-label="search"
+            />
+          </form>
+        </div>
+      </nav>
     </header>
-    <div class="container">
+
+    <!--pokemon list-->
+    <div>
       <h1 class="page-title">Pokedex</h1>
       <p id="loading-message"></p>
-      <ul class="pokemon-list"></ul>
+      <ul class="list-group-horizontal"></ul>
+
+      <!--modal here-->
+      <div
+        class="modal fade"
+        id="pokemon-modal"
+        tabindex="-1"
+        role="dialog"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h3 class="modal-title">pokemon name</h3>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times</span>
+              </button>
+            </div>
+            <div class="modal-body"></div>
+            <div class="modal-footer"></div>
+          </div>
+        </div>
+      </div>
     </div>
-    <div id="modal-container"></div>
+
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch.umd.js"></script>
     <script src="js/scripts.js"></script>
