--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="dist/minified.css" />
   </head>
   <body>
     <header class="page-header">
@@ -25,18 +25,27 @@
             alt="page logo"
           />
           <img class="header-img" src="img/eevee.png" alt="Pokemon icon" />
-          <img class="header-img" src="img/pikachu.png" alt="Pokemon icon" />
+          <img class="header-img1" src="img/pikachu.png" alt="Pokemon icon" />
           <img class="header-img" src="img/charmander.png" alt="Pokemon icon" />
           <img class="header-img" src="img/bullbasaur.png" alt="Pokemon icon" />
-          <img class="header-img" src="img/squirtle.png" alt="Pokemon icon" />
+          <img class="header-img1" src="img/squirtle.png" alt="Pokemon icon" />
           <img class="header-img" src="img/snorlax.png" alt="Pokemon icon" />
+          <form class="form-inline my-2 my-lg-0">
+            <input
+              class="form-control mr-ms-2"
+              id="pokedex-search"
+              type="search"
+              placeholder="Search Pokédex"
+              aria-label="search"
+            />
+          </form>
         </div>
       </nav>
     </header>
 
     <!--pokemon list-->
     <div>
-      <h1 class="page-title">Pokedex</h1>
+      <img class="title-img" src="img/pokedex.png" alt="Pokedex" />
       <p id="loading-message"></p>
       <ul class="list-group-horizontal"></ul>
 
@@ -85,6 +94,6 @@
     ></script>
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch.umd.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="dist/minified.js"></script>
   </body>
 </html>
