cleaned up code

--- a/index.html
+++ b/index.html
@@ -94,6 +94,6 @@
     ></script>
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch.umd.js"></script>
-    <script src="dist/minified.js"></script>
+    <script src="dist/minified-min.js"></script>
   </body>
 </html>
